--- a/my-suitcase/src/styles.scss
+++ b/my-suitcase/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+/* Directory file of styles. To see style go to scss/ */
+@import "scss/variables";
+@import "scss/mixins";
+@import "scss/reset";
+@import "scss/header";
+@import "scss/responsive";
+@import "scss/banner";
+@import "scss/section-intro";
+@import "scss/home";
+// @import "scss/gallery";
+@import "scss/contact";
+@import "scss/blog";
+@import "scss/btn";
+@import "scss/footer";
