--- a/my-suitcase/src/scss/_gallery.scss
+++ b/my-suitcase/src/scss/_gallery.scss
@@ -1,5 +1,5 @@
 .gallery-bg{
-    // background: url(../img/home/gallery-bg.png) left center no-repeat;
+    background: url(../img/home/gallery-bg.png) left center no-repeat;
     background-size: cover;
 }
 
