--- a/my-suitcase/src/scss/_variables.scss
+++ b/my-suitcase/src/scss/_variables.scss
@@ -1,18 +1,28 @@
-/* Font family */
-$title-font: "Roboto Condensed", sans-serif;
-$text-font: "Roboto", sans-serif;
+/* font family
+	============================================================================================ */
+$title-font: 'Roboto Condensed', sans-serif;
+$text-font: 'Roboto', sans-serif;                    
 
-/* Color variables */
+
+/* color variables
+	============================================================================================ */
 $title-color: #2a2a2a;
 $text-color: #888888;
-$primary-color: #ec3939;
-$primary-color2: #ea0763; // Rename: secondary color
+$primary-color: #6059f6;
+// $primary-color2: #ea0763;
+
 
 // $black: #242429;
 $link-color: #777777;
 $white: #fff;
 
+
 /* google fonts
 	============================================================================================ */
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:700");
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
+
+
+
+
+
