--- a/my-suitcase/src/styles.scss
+++ b/my-suitcase/src/styles.scss
@@ -1,14 +1,14 @@
 /* Directory file of styles. To see style go to scss/ */
-@import "scss/variables";
-@import "scss/mixins";
-@import "scss/reset";
-@import "scss/header";
-@import "scss/responsive";
-@import "scss/banner";
-@import "scss/section-intro";
-@import "scss/home";
+@import "./scss/_variables";
+@import "./scss/_mixins";
+@import "./scss/_reset";
+@import "./scss/_header";
+@import "./scss/_responsive";
+@import "./scss/_banner";
+@import "./scss/_section-intro";
+@import "./scss/_home";
 // @import "scss/gallery";
-@import "scss/contact";
-@import "scss/blog";
-@import "scss/btn";
-@import "scss/footer";
+@import "./scss/contact";
+@import "./scss/blog";
+@import "./scss/btn";
+@import "./scss/footer";
