--- a/my-suitcase/src/app/public/home/containers/home/home.component.html
+++ b/my-suitcase/src/app/public/home/containers/home/home.component.html
@@ -1,5 +1,8 @@
 <h2>Estas en public/home</h2>
 
+<button *ngIf="isLogged && isAdmin" (click)="goTo('admin')">Admin</button>
+<button (click)="goTo('public/design')">Design</button>
+
 <div style="text-align:center">
   <h1>
     Welcome to my-suitcase!
