--- a/my-suitcase/src/scss/_home.scss
+++ b/my-suitcase/src/scss/_home.scss
@@ -240,6 +240,7 @@
   &__item{
     background: $white;
     border-radius: 20px;
+    margin: 20px 0;
     padding: 30px 15px;
 
     @media(min-width: 768px){
