--- a/my-suitcase/src/scss/_reset.scss
+++ b/my-suitcase/src/scss/_reset.scss
@@ -1,5 +1,8 @@
 /* global style start
 	============================================================================================ */
+html {
+  height: 100%;
+}
 
 body {
 	color: $text-color;
