--- a/my-suitcase/src/app/public/design/containers/design/design.component.html
+++ b/my-suitcase/src/app/public/design/containers/design/design.component.html
@@ -34,7 +34,7 @@
           </ul>
 
           <div class="nav-right text-center text-lg-right py-4 py-lg-0">
-            <a class="button" href="#">Get Started</a>
+            <a class="button" href="javascript:void(0)" (click)="goTo('public/home')">Get Started</a>
           </div>
         </div>
       </div>
@@ -52,7 +52,7 @@
       <div class="col-md-6 col-lg-5 mb-5 mb-md-0">
         <h1>Travel More To Discover Yourself</h1>
         <p>Air seed winged lights saw kind whales in sixth dont seas dron image so fish all tree meat dont there is seed winged lights saw kind whales in sixth dont seas dron image so fish all tree meat dont there </p>
-        <a class="button button-hero mt-4" href="#">Get Started</a>
+        <a class="button button-hero mt-4" href="javascript:void(0)" (click)="goTo('public/home')">Get Started</a>
       </div>
       <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
         <img class="img-fluid" src="img/home/hero-img.png" alt="">
