--- a/my-suitcase/src/app/not-found/not-found.component.html
+++ b/my-suitcase/src/app/not-found/not-found.component.html
@@ -2,7 +2,7 @@
   <div class="main_menu">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container box_1620">
-        <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand logo_h" href="index.html"><img src="assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -51,7 +51,7 @@
         <a class="button button-hero mt-4" href="#">Go back to home</a>
       </div>
       <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-        <img class="img-fluid" src="img/home/hero-img.png" alt="">
+        <img class="img-fluid" src="assets/img/home/hero-img.png" alt="">
       </div>
     </div>
   </div>
