--- a/my-suitcase/src/app/public/design/containers/design/design.component.html
+++ b/my-suitcase/src/app/public/design/containers/design/design.component.html
@@ -2,7 +2,7 @@
   <div class="main_menu">
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container box_1620">
-        <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
+        <a class="navbar-brand logo_h" href="index.html"><img src="assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -55,7 +55,7 @@
         <a class="button button-hero mt-4" href="javascript:void(0)" (click)="goTo('public/home')">Get Started</a>
       </div>
       <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-        <img class="img-fluid" src="img/home/hero-img.png" alt="">
+        <img class="img-fluid" src="assets/img/home/hero-img.png" alt="">
       </div>
     </div>
   </div>
@@ -67,7 +67,7 @@
 <section class="section-margin generic-margin">
   <div class="container">
     <div class="section-intro text-center pb-90px">
-      <img class="section-intro-img" src="img/home/section-icon.png" alt="">
+      <img class="section-intro-img" src="assets/img/home/section-icon.png" alt="">
       <h2>Our Popular Services</h2>
       <p>Fowl have fruit moveth male they are that place you will lesser</p>
     </div>
@@ -76,7 +76,7 @@
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
         <div class="service-card text-center">
           <div class="service-card-img">
-            <img class="img-fluid" src="img/home/service1.png" alt="">
+            <img class="img-fluid" src="assets/img/home/service1.png" alt="">
           </div>
           <div class="service-card-body">
             <h3>Hotel Booking</h3>
@@ -87,7 +87,7 @@
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
         <div class="service-card text-center">
           <div class="service-card-img">
-            <img class="img-fluid" src="img/home/service2.png" alt="">
+            <img class="img-fluid" src="assets/img/home/service2.png" alt="">
           </div>
           <div class="service-card-body">
             <h3>Flight Booking</h3>
@@ -98,7 +98,7 @@
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
         <div class="service-card text-center">
           <div class="service-card-img">
-            <img class="img-fluid" src="img/home/service3.png" alt="">
+            <img class="img-fluid" src="assets/img/home/service3.png" alt="">
           </div>
           <div class="service-card-body">
             <h3>Destination Booking</h3>
@@ -118,7 +118,7 @@
     <div class="row">
       <div class="col-lg-7 col-md-6 mb-4 mb-md-0">
         <div class="about-img">
-          <img class="img-fluid" src="img/home/about-img.png" alt="">
+          <img class="img-fluid" src="assets/img/home/about-img.png" alt="">
         </div>
       </div>
       <div class="col-lg-5 col-md-6 align-self-center about-content">
@@ -137,7 +137,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="tour-card">
-          <img class="card-img rounded-0" src="img/home/tour1.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/home/tour1.png" alt="">
           <div class="tour-card-overlay">
             <div class="media">
               <div class="media-body">
@@ -164,7 +164,7 @@
         </div>
 
         <div class="tour-card">
-          <img class="card-img rounded-0" src="img/home/tour2.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/home/tour2.png" alt="">
           <div class="tour-card-overlay">
             <div class="media">
               <div class="media-body">
@@ -184,7 +184,7 @@
     <div class="row">
       <div class="col-md-6 col-lg-7">
         <div class="tour-card">
-          <img class="card-img rounded-0" src="img/home/tour3.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/home/tour3.png" alt="">
           <div class="tour-card-overlay">
             <div class="media">
               <div class="media-body">
@@ -201,7 +201,7 @@
       </div>
       <div class="col-md-6 col-lg-5">
         <div class="tour-card">
-          <img class="card-img rounded-0" src="img/home/tour4.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/home/tour4.png" alt="">
           <div class="tour-card-overlay">
             <div class="media">
               <div class="media-body">
@@ -226,7 +226,7 @@
 <section class="bg-gray section-padding magic-ball magic-ball-testimonial pb-xl-5">
   <div class="container">
     <div class="section-intro text-center pb-90px">
-      <img class="section-intro-img" src="img/home/section-icon.png" alt="">
+      <img class="section-intro-img" src="assets/img/home/section-icon.png" alt="">
       <h2>Our client says</h2>
       <p>Fowl have fruit moveth male they are that place you will lesser</p>
     </div>
@@ -237,7 +237,7 @@
         <div class="row">
           <div class="col-md-3 col-lg-2 align-self-center">
             <div class="testimonial__img">
-              <img class="card-img rounded-0" src="img/testimonial/t-slider1.png" alt="">
+              <img class="card-img rounded-0" src="assets/img/testimonial/t-slider1.png" alt="">
             </div>
           </div>
           <div class="col-md-9 col-lg-10">
@@ -254,7 +254,7 @@
         <div class="row">
           <div class="col-md-3 col-lg-2 align-self-center">
             <div class="testimonial__img">
-              <img class="card-img rounded-0" src="img/testimonial/t-slider1.png" alt="">
+              <img class="card-img rounded-0" src="assets/img/testimonial/t-slider1.png" alt="">
             </div>
           </div>
           <div class="col-md-9 col-lg-10">
@@ -271,7 +271,7 @@
         <div class="row">
           <div class="col-md-3 col-lg-2 align-self-center">
             <div class="testimonial__img">
-              <img class="card-img rounded-0" src="img/testimonial/t-slider1.png" alt="">
+              <img class="card-img rounded-0" src="assets/img/testimonial/t-slider1.png" alt="">
             </div>
           </div>
           <div class="col-md-9 col-lg-10">
@@ -360,7 +360,7 @@
 <section class="section-padding bg-gray">
   <div class="container">
     <div class="section-intro text-center pb-90px">
-      <img class="section-intro-img" src="img/home/section-icon.png" alt="">
+      <img class="section-intro-img" src="assets/img/home/section-icon.png" alt="">
       <h2>From our Blog</h2>
       <p>Fowl have fruit moveth male they are that place you will lesser</p>
     </div>
@@ -368,7 +368,7 @@
     <div class="row">
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
         <div class="card-blog">
-          <img class="card-img rounded-0" src="img/blog/blog-1.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/blog/blog-1.png" alt="">
           <div class="card-blog-body">
             <a href="#">
               <h4>Forest responds to consultation smoking in al fresco.</h4>
@@ -384,7 +384,7 @@
 
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
         <div class="card-blog">
-          <img class="card-img rounded-0" src="img/blog/blog-2.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/blog/blog-2.png" alt="">
           <div class="card-blog-body">
             <a href="#">
               <h4>Forest responds to consultation smoking in al fresco.</h4>
@@ -400,7 +400,7 @@
 
       <div class="col-md-6 col-lg-4 mb-4 mb-lg-0">
         <div class="card-blog">
-          <img class="card-img rounded-0" src="img/blog/blog-3.png" alt="">
+          <img class="card-img rounded-0" src="assets/img/blog/blog-3.png" alt="">
           <div class="card-blog-body">
             <a href="#">
               <h4>Forest responds to consultation smoking in al fresco.</h4>
@@ -475,14 +475,14 @@
         <div class="single-footer-widget mail-chimp">
           <h6 class="mb-20">InstaFeed</h6>
           <ul class="instafeed d-flex flex-wrap">
-            <li><img src="img/instagram/i1.jpg" alt=""></li>
-            <li><img src="img/instagram/i2.jpg" alt=""></li>
-            <li><img src="img/instagram/i3.jpg" alt=""></li>
-            <li><img src="img/instagram/i4.jpg" alt=""></li>
-            <li><img src="img/instagram/i5.jpg" alt=""></li>
-            <li><img src="img/instagram/i6.jpg" alt=""></li>
-            <li><img src="img/instagram/i7.jpg" alt=""></li>
-            <li><img src="img/instagram/i8.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i1.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i2.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i3.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i4.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i5.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i6.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i7.jpg" alt=""></li>
+            <li><img src="assets/img/instagram/i8.jpg" alt=""></li>
           </ul>
         </div>
       </div>
