fix rest of path imgs

--- a/my-suitcase/src/app/public/register/register.component.html
+++ b/my-suitcase/src/app/public/register/register.component.html
@@ -42,5 +42,5 @@
     <a href="javascript:void(0)" (click)="goTo('login')" class="nav-link" role="button" aria-haspopup="true" aria-expanded="false">Ya estoy registrado, volver</a>
   </div>
 
-  <img class="login-img" alt="login image" src="img/home/service1.png">
+  <img class="login-img" alt="login image" src="assets/img/home/service1.png">
 </form>
