--- a/my-suitcase/src/app/public/login/login.component.html
+++ b/my-suitcase/src/app/public/login/login.component.html
@@ -21,5 +21,5 @@
     <a href="javascript:void(0)" (click)="toggleMode()" class="nav-link" role="button" aria-haspopup="true" aria-expanded="false">{{loginMode ? 'Olvide la contraseña' : 'Ya me acuerdo de la contraseña'}}</a>
   </div>
 
-  <img class="login-img" alt="login image" src="img/home/service1.png">
+  <img class="login-img" alt="login image" src="assets/img/home/service1.png">
 </form>
