add timeout functionality

--- a/my-suitcase/src/app/app.component.html
+++ b/my-suitcase/src/app/app.component.html
@@ -1,2 +1,4 @@
-<button *ngIf="isSessionActive" (click)="logout()">Logout</button>
-<router-outlet></router-outlet>
+<div name="content" #content>
+  <button *ngIf="isSessionActive" (click)="logout()">Logout</button>
+  <router-outlet></router-outlet>
+</div>
