--- a/my-suitcase/src/app/public/home/containers/home/home.component.html
+++ b/my-suitcase/src/app/public/home/containers/home/home.component.html
@@ -7,6 +7,7 @@
   <h1>
     Welcome to my-suitcase!
   </h1>
-  <img width="300" alt="Angular Logo" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F9%2F95%2FSuitcase_With_Stickers_-_No_Trademarks.svg%2F438px-Suitcase_With_Stickers_-_No_Trademarks.svg.png&f=1&nofb=1">
+  <img width="300" alt="suitcase Logo" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F9%2F95%2FSuitcase_With_Stickers_-_No_Trademarks.svg%2F438px-Suitcase_With_Stickers_-_No_Trademarks.svg.png&f=1&nofb=1">
+
 </div>
 
