--- a/my-suitcase/src/app/public/login/login.component.html
+++ b/my-suitcase/src/app/public/login/login.component.html
@@ -11,7 +11,7 @@
       <small id="passwordHelp" class="form-text text-muted">La contraseña debe contener entre 6 y 20 caracteres, de los cuales 1 minúscula, 1 mayúscula, 1 número y 1 carácter especial</small>
     </div>
     <div class="form-check" *ngIf="loginMode">
-      <input type="checkbox" class="form-check-input" id="rememberme">
+      <input type="checkbox" class="form-check-input" id="rememberme" formControlName="keepSession">
       <label class="form-check-label" for="rememberme">Recuérdame</label>
     </div>
     <div class="button-block">
