--- a/my-suitcase/src/styles.scss
+++ b/my-suitcase/src/styles.scss
@@ -1,3 +1,5 @@
+@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 /* Directory file of styles. To see style go to scss/ */
 @import "./scss/_variables";
 @import "./scss/_mixins";
@@ -12,3 +14,6 @@
 @import "./scss/blog";
 @import "./scss/btn";
 @import "./scss/footer";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
