--- a/my-suitcase/src/app/public/login/login.component.html
+++ b/my-suitcase/src/app/public/login/login.component.html
@@ -1,9 +1,10 @@
+<navbar-component></navbar-component>
 <form class="col-lg-6 col-xl-6 offset-xl-1" [formGroup]="loginForm">
   <div class="search-wrapper">
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Introduce email"  formControlName="email">
-      <small id="emailHelp" class="form-text text-muted">No compartiremos tu email con nadie</small>
+      <!-- <small id="emailHelp" class="form-text text-muted">No compartiremos tu email con nadie</small> -->
     </div>
     <div class="form-group" *ngIf="loginMode">
       <label for="password">Contraseña</label>
@@ -15,11 +16,12 @@
       <label class="form-check-label" for="rememberme">Recuérdame</label>
     </div>
     <div class="button-block">
-      <button type="submit" [disabled]="!loginForm.valid" class="btn btn-primary" (click)="submit()">Adelante!</button>
-      <button type="submit" class="btn btn-primary" (click)="goTo('register')">Registrarse!</button>
+      <button type="submit" class="button border-1 mt-3" [disabled]="!loginForm.valid"(click)="submit()">Adelante!</button>
+      <button type="submit" class="button border-1 mt-3" (click)="goTo('register')">Soy nuevo, quiero empezar!</button>
     </div>
     <a href="javascript:void(0)" (click)="toggleMode()" class="nav-link" role="button" aria-haspopup="true" aria-expanded="false">{{loginMode ? 'Olvide la contraseña' : 'Ya me acuerdo de la contraseña'}}</a>
   </div>
-
-  <img class="login-img" alt="login image" src="assets/img/home/service1.png">
+    <img class="login-img" alt="login image" src="assets/img/home/service1.png">
 </form>
+
+<footer-component></footer-component>
