--- a/my-suitcase/src/scss/_btn.scss
+++ b/my-suitcase/src/scss/_btn.scss
@@ -13,7 +13,7 @@
   }
 
   &:hover{
-    background-color: #201aa3;
+    background-color: $secondary-color;
     color: $white;
   }
 }
@@ -27,7 +27,7 @@
 }
 
 .button-shadow{
-  box-shadow: 0px 10px 20px 0px rgba(181, 176, 255, 0.2); 
+  box-shadow: 0px 10px 20px 0px rgba(181, 176, 255, 0.2);
 }
 
 button.button{
