feat: refactor login/register + styling

--- a/my-suitcase/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/my-suitcase/src/app/core/shared/navbar/containers/navbar.component.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav menu_nav justify-content-end">
             <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> -->
             <!-- <li class="nav-item"><a class="nav-link" href="package.html">Packages</a>
             <li class="nav-item submenu dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -22,7 +22,7 @@
               </ul>
             </li> -->
 
-            <li class="nav-item submenu dropdown">
+            <!-- <li class="nav-item submenu dropdown">
               <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                  aria-expanded="false">Blog</a>
               <ul class="dropdown-menu">
@@ -30,7 +30,7 @@
                 <li class="nav-item"><a class="nav-link" href="blog-details.html">Blog Details</a></li>
               </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
           </ul>
 
           <!-- <div class="nav-right text-center text-lg-right py-4 py-lg-0">
