--- a/my-suitcase/src/scss/_contact.scss
+++ b/my-suitcase/src/scss/_contact.scss
@@ -50,7 +50,7 @@
   }
 
   .form-control{
-    border: 1px solid #f0e9ff;
+    border: 1px solid $primary-color;
     border-radius: 5px;
     height: 48px;
     padding-left: 18px;
