--- a/my-suitcase/src/scss/_home.scss
+++ b/my-suitcase/src/scss/_home.scss
@@ -370,6 +370,7 @@
   background: #f8f8ff;
   padding: 30px 10px;
   text-align: center;
+  border: 1px solid $secondary-color;
 
   @media(min-width: 600px){
     padding: 60px;
