--- a/my-suitcase/src/app/core/shared/footer/containers/footer.component.html
+++ b/my-suitcase/src/app/core/shared/footer/containers/footer.component.html
@@ -47,9 +47,9 @@
     <div class="footer-bottom">
       <div class="row align-items-center">
         <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">
-          Copyright ©
+          Copyright MySuitcase ©
           <script type="text/javascript">document.write(new Date().getFullYear());</script>2020 All rights reserved |
-          This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com"
+          Template by <a href="https://colorlib.com"
             target="_blank">Colorlib</a>
         </p>
         <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
