--- a/my-suitcase/src/scss/_btn.scss
+++ b/my-suitcase/src/scss/_btn.scss
@@ -3,7 +3,8 @@
   display: inline-block;
   background-color: $primary-color;
   color: $white;
-  border-radius: 30px;
+  border-radius: 20px;
+  margin: 10px;
   padding: 8px 25px;
   text-transform: capitalize;
   @include transition;
