feat: refactor home style

--- a/my-suitcase/src/app/not-found/not-found.component.html
+++ b/my-suitcase/src/app/not-found/not-found.component.html
@@ -19,7 +19,7 @@
         <a class="button button-hero mt-4" href="#">Volver</a>
       </div>
       <div class="col-md-6 col-lg-7 col-xl-6 offset-xl-1">
-        <img class="img-fluid" src="assets/img/404/undraw_stranded.png" alt="">
+        <img class="img-fluid" src="assets/img/404/404.svg" alt="">
       </div>
     </div>
   </div>
