--- a/my-suitcase/src/app/public/login/containers/login.component.scss
+++ b/my-suitcase/src/app/public/login/containers/login.component.scss
@@ -5,7 +5,8 @@
   }
 
   .login-img {
-    min-height: 200px;
+    // min-height: 200px;
+    width: 200px;
     display: block;
     margin: auto;
     margin-top: 20px;
