--- a/my-suitcase/src/app/public/register/containers/register.component.html
+++ b/my-suitcase/src/app/public/register/containers/register.component.html
@@ -47,7 +47,7 @@
       aria-expanded="false">Ya estoy registrado, volver.</a></small>
   </div>
 
-  <img class="login-img" alt="login image" src="assets/img/home/service1.png">
+  <img class="register-img" alt="login image" src="../../../../assets/img/login/undraw_travelers.svg">
 </form>
 
 <footer-component></footer-component>
