--- a/my-suitcase/src/app/public/register/containers/register.component.scss
+++ b/my-suitcase/src/app/public/register/containers/register.component.scss
@@ -4,8 +4,9 @@
     padding-top: 10%;
   }
 
-  .login-img {
-    min-height: 200px;
+   .register-img {
+    // min-height: 200px;
+    width: 200px;
     display: block;
     margin: auto;
     margin-top: 20px;
