--- a/my-suitcase/src/app/core/shared/footer/containers/footer.component.html
+++ b/my-suitcase/src/app/core/shared/footer/containers/footer.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-lg-4  col-md-6 col-sm-6">
        <div class="single-footer-widget">
-          <h6>Work in progress</h6>
+          <!-- <h6>Work in progress</h6> -->
          <!-- <h6>About My suitcase</h6> -->
           <!--  <p>
             The world has become so fast paced that people don’t want to stand by reading a page of information to be
