--- a/my-suitcase/src/app/public/login/containers/login.component.html
+++ b/my-suitcase/src/app/public/login/containers/login.component.html
@@ -29,7 +29,7 @@
     <small><a href="javascript:void(0)" (click)="toggleMode()" class="nav-link" role="button" aria-haspopup="true"
       aria-expanded="false">{{loginMode ? '¿Olvidaste la contraseña?' : 'Ya me acuerdo de la contraseña :)'}}</a></small>
   </div>
-  <img class="login-img" alt="login image" src="assets/img/home/service1.png">
+  <img class="login-img" alt="login image" src="../../../../assets/img/login/undraw_travelers.svg">
 </form>
 
 <footer-component></footer-component>
