introduce component for the basic data form with animation

--- a/client/src/scss/_variables.scss
+++ b/client/src/scss/_variables.scss
@@ -15,6 +15,7 @@ $title-color: #2a2a2a;
 $text-color: #888888;
 $primary-color: #D88A83;
 $secondary-color: #BA6C65;
+$tertiary-color: #394359;
 
 
 $black: #242429;
@@ -38,3 +39,6 @@ $white: #fff;
 .nav-link{
   color: unset;
 }
+
+$max-footer-height: 175px;
+$max-footer-height-full-screen: 140px;
