--- a/client/src/app/core/shared/navbar/containers/navbar.component.html
+++ b/client/src/app/core/shared/navbar/containers/navbar.component.html
@@ -11,34 +11,9 @@
 
         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
           <ul class="nav navbar-nav menu_nav justify-content-end">
-
-
             <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item active"><a class="nav-link" href="public/design">Design</a></li>
-            <!-- <li class="nav-item"><a class="nav-link" href="about.html">About</a></li> -->
-            <!-- <li class="nav-item"><a class="nav-link" href="package.html">Packages</a>
-            <li class="nav-item submenu dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                 aria-expanded="false">Pages</a>
-              <ul class="dropdown-menu">
-                <li class="nav-item"><a class="nav-link" href="amentities.html">Amentities</a>
-              </ul>
-            </li> -->
-
-            <!-- <li class="nav-item submenu dropdown">
-              <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                 aria-expanded="false">Blog</a>
-              <ul class="dropdown-menu">
-                <li class="nav-item"><a class="nav-link" href="blog.html">Blog Single</a></li>
-                <li class="nav-item"><a class="nav-link" href="blog-details.html">Blog Details</a></li>
-              </ul>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
+            <li class="nav-item active"><a class="nav-link" href="public/contact">Contact</a></li>
           </ul>
-
-          <!-- <div class="nav-right text-center text-lg-right py-4 py-lg-0">
-            <a class="button" href="javascript:void(0)" (click)="goTo('public/home')">Get Started</a>
-          </div> -->
         </div>
       </div>
     </nav>
