feature: add legal links footer

--- a/client/src/app/core/shared/footer/containers/footer.component.html
+++ b/client/src/app/core/shared/footer/containers/footer.component.html
@@ -6,7 +6,10 @@
         <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">
           Copyright MySuitcase ©
           <script type="text/javascript">document.write(new Date().getFullYear());</script>2020 All rights reserved |
-          Template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+          Template by <a href="https://colorlib.com" target="_blank">Colorlib</a> |
+          <a href="">Terms of use</a> |
+          <a href="">Privacy Policy</a> |
+          <a href="">Cookies policy</a>
         </p>
         <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
