--- a/client/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
+++ b/client/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
@@ -56,7 +56,7 @@
 
     <div id="button-wrapper">
       <button mat-raised-button *ngIf="currentQuestion !== steps.length" [disabled]="isDisabled()" (click)="nextQuestion()" [mat-dialog-close]="false" color="primary">Continuar</button>
-      <button mat-raised-button *ngIf="currentQuestion === steps.length" [disabled]="isDisabled()" (click)="goToCreateSuitcase()" [mat-dialog-close]="false" color="primary">Hacer la lista</button>
+      <button mat-raised-button *ngIf="currentQuestion === steps.length" [disabled]="isDisabled()" (click)="saveSuitcase()" [mat-dialog-close]="false" color="primary">Hacer la lista</button>
     </div>
   </form>
 </div>
