fix issues with token

--- a/client/src/app/public/login/containers/login.component.html
+++ b/client/src/app/public/login/containers/login.component.html
@@ -18,7 +18,7 @@
       </details>
     </div>
     <div class="form-check" *ngIf="loginMode">
-      <input type="checkbox" class="form-check-input" id="rememberme">
+      <input type="checkbox" class="form-check-input" id="rememberme" formControlName="keepSession">
       <label class="form-check-label" for="rememberme">Recuérdame</label>
     </div>
     <div class="button-block">
