set up weather widget component

--- a/client/src/app/public/create-suitcase/create-suitcase.component.html
+++ b/client/src/app/public/create-suitcase/create-suitcase.component.html
@@ -1,1 +1,5 @@
 <div>Suitcase drag and drop</div>
+
+<div *ngIf="showWeather" class="weather-panel-wrapper">
+  <my-suitcase-weather-panel [coordinates]="suitcase.place.coordinates" [weatherDays]="weatherDays"></my-suitcase-weather-panel>
+</div>
