--- a/client/src/app/public/home/containers/home/home.component.html
+++ b/client/src/app/public/home/containers/home/home.component.html
@@ -18,7 +18,7 @@
   <section class="section-margin generic-margin">
     <div class="container">
       <div class="section-intro text-center pb-90px">
-        <img class="section-intro-img" src="img/logo3.png" alt="">
+        <!--<img class="section-intro-img" src="../../../../../assets/img/logo/logo.png" alt="">-->
         <h2>¿Cuál es tu tipo de viaje preferido?</h2>
       </div>
       <div class="row">
