--- a/client/src/app/public/home/containers/home/home.component.scss
+++ b/client/src/app/public/home/containers/home/home.component.scss
@@ -1,12 +1,18 @@
 @import "./../../../../../scss/_variables";
 
-.full-screen .logged-user-section {
-  height: calc(100vh - #{$max-footer-height-full-screen});
+:host {display: inline-block; width: 100%; height: 100%}
+
+.full-screen {
+  height: calc(100% - #{$max-footer-height});
 }
 
 .container, .row {
   height: 100%;
   position: relative;
+}
+
+.logged-user-section {
+  height: 100%;
 }
 
 #questions-area {
