--- a/client/src/scss/_footer.scss
+++ b/client/src/scss/_footer.scss
@@ -3,9 +3,11 @@
 
 .footer-area {
   background: #394359;
-  padding-top: 30px;
   color: #fff;
   font-size: 12px;
+  height: $max-footer-height;
+  max-height: $max-footer-height;
+  padding-top: 30px;
 
   #hr {
     margin: 0 15%;
@@ -254,7 +256,7 @@
 }
 
 .footer-bottom {
-  padding: 18px 0;
+  padding: 15px 0;
   margin-top: 30px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
 
