initial set up to bring recommendations when loading page according to options chosen when creating suitcase

--- a/client/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
+++ b/client/src/app/public/home/containers/create-suitcase-form/create-suitcase-form.component.html
@@ -44,13 +44,12 @@
         <span id="place-address"></span>
       </div>
     </div>
-    <div id="{{steps[3].id}}" [formGroup]="createSuitcaseForm.controls.type">
+    <div id="{{steps[3].id}}" formArrayName="type">
       <mat-label>Que tipo de viaje vas a realizar?</mat-label>
       <div id="type_options">
-        <mat-checkbox class="" formControlName="beach">Playa</mat-checkbox>
-        <mat-checkbox class="" formControlName="mountain">Montaña</mat-checkbox>
-        <mat-checkbox class="" formControlName="cultural">Cultural</mat-checkbox>
-        <mat-checkbox class="" formControlName="sport">Deporte</mat-checkbox>
+        <ng-container *ngFor="let option of createSuitcaseForm.controls.type.controls; let i=index" [formGroupName]="i">
+          <mat-checkbox class="" formControlName="selected">{{getName(option)}}</mat-checkbox>
+        </ng-container>
       </div>
     </div>
 
