--- a/client/src/app/public/create-suitcase/create-suitcase.component.html
+++ b/client/src/app/public/create-suitcase/create-suitcase.component.html
@@ -3,3 +3,7 @@
 <div *ngIf="showWeather" class="weather-panel-wrapper">
   <my-suitcase-weather-panel [coordinates]="suitcase.place.coordinates" [weatherDays]="weatherDays"></my-suitcase-weather-panel>
 </div>
+
+<div>
+  <div class="item" *ngFor="let item in suggestionList"></div>
+</div>
