--- a/client/src/app/timeout-dialog/timeout-dialog.component.html
+++ b/client/src/app/timeout-dialog/timeout-dialog.component.html
@@ -4,5 +4,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button color="warn">Salir</button>
-  <button mat-button mat-dialog-close cdkFocusInitial color="primary">Mantener</button>
+  <button mat-button mat-dialog-close="true" cdkFocusInitial color="primary">Mantener</button>
 </mat-dialog-actions>
